# beatbox_midi

./: .gitignore  README.md  pyproject.toml
conf/: audio.yaml  classifiers.yaml  data.yaml  model.yaml
notebooks/: eda.ipynb
scripts/: train_all.sh
src/training/: __init__.py  config.py  data.py  features.py  predict.py  train.py
src/utils/: logger.py
